--- a/youtube.html/thumbnail/styles/video.css
+++ b/youtube.html/thumbnail/styles/video.css
@@ -36,6 +36,7 @@ thumbnail {
 
 .thumbnail-row {
   margin-bottom: 1px;
+  position: relative;
 }
 
 .video-author,
@@ -53,4 +54,20 @@ thumbnail {
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 16px;
   row-gap: 40px;
+}
+
+.video-time {
+  font-family: Roboto, Arial;
+  font-size: 12px;
+  font-weight: 500;
+  padding-left: 4px;
+  padding-right: 4px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  border-radius: 2px;
+  background-color: black;
+  color: white;
+  position: absolute;
+  bottom: 8px;
+  right: 5px;
 }
